<resources>
    <string name="app_name">PlanJ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="sign_up">회원가입</string>
    <string name="login">로그인</string>
    <string name="application_logo">Application Logo</string>
    <string name="easy_login">간편 로그인</string>
    <string name="naver_easy_login">네이버 간편 로그인</string>
    <string name="fail">실패</string>
    <string name="schedule">일정</string>
    <string name="complete">완료</string>
    <string name="exit">나가기</string>
    <string name="day">일</string>
    <string name="dayNumber">19</string>
    <string name="nickname">닉네임</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="password_confirm_error">비밀번호가 일치하지 않습니다.</string>
    <string name="nickname_error">닉네임은 한글, 영어, 숫자로 조합해야하고, 길이는 2자 이상 12자 이하이어야 합니다</string>
    <string name="email_condition">*******@****.***</string>
    <string name="password_condition">영문, 숫자, 특수문자 1자이상 포함, 8자 이상 16자 이하</string>
    <string name="nickname_condition">2자 이상 12자 이하</string>
    <string name="add_schedule">일정 추가</string>
    <string name="uncategorized">미분류</string>
    <string name="schedule_title">제목</string>
    <string name="start">시작</string>
    <string name="not_set">설정 안함</string>
    <string name="end">종료</string>
    <string name="alarm">알림</string>
    <string name="repetition">반복</string>
    <string name="location">위치</string>
    <string name="memo">추가 메모</string>
    <string name="category">카테고리</string>
    <string name="memo_length">%d/255</string>
    <string name="weekSchedule">주간 통계</string>
    <string name="completeSchedule">성공한 일정</string>
    <string name="failSchedule">실패한 일정</string>
    <string name="haveSchedule">남은 일정</string>
    <string name="edit_schedule">수정</string>
    <string name="delete_schedule">삭제</string>
    <string name="schedule_title_condition">20자 이내</string>
    <string name="cancel">취소</string>
    <string name="daily">매일</string>
    <string name="weekly">매주</string>
    <string name="end_time">종료 시간</string>
    <string name="departure_time">출발 시간</string>
    <string name="delete_start_date_time">시작 날짜 삭제</string>
    <string name="participants">참가자</string>
    <string name="see_all">전체 보기</string>
    <string name="user_profile_image">프로필 이미지</string>
    <string name="friends">Friends</string>
    <string name="close">닫기</string>
    <string name="enter_email">이메일 입력</string>
    <string name="add_friend">친구 추가</string>
    <string name="delete">삭제</string>
    <string name="vertical_ellipsis">⋮</string>
    <string name="email_format_error">이메일 형식이 옳지 않습니다.</string>
    <string name="email_exist_error">이미 존재하는 이메일입니다.</string>
    <string name="pwd_length_error">비밀번호 길이는 8자 이상 16자 이하입니다.</string>
    <string name="pwd_contents_error">비밀번호는 영문, 숫자, 특수문자를 1자이상 포함해야 합니다.</string>
    <string name="repeat_per_day">%d일마다 반복</string>
    <string name="repeat_per_week">%d주마다 반복</string>
    <string name="before_end_time">종료 시간 %d분 전</string>
    <string name="before_departure_time">출발 시간 %d분 전</string>
    <string name="search_result">검색 결과</string>
    <string name="all">전체</string>
    <string name="setting">설정</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal">회원탈퇴</string>
    <string name="read_fail_memo">실패 사유 보기</string>
    <string name="alarm_setting">푸시 알림</string>
    <string name="edit_profile">프로필 편집</string>
    <string name="settings">Settings</string>
    <string name="schedule_not_done">일정 미완료</string>
    <string name="schedule_done">일정 완료</string>
    <string name="post_notifications_allowed">알림을 허용했습니다.</string>
    <string name="post_notifications_denied">알림을 거부했습니다.</string>
    <string name="departure">출발</string>
    <string name="enter_category">카테고리 입력</string>
    <string name="add">추가</string>
    <string name="minute_before">분 전</string>
    <string name="reason">사유</string>
    <string name="write">작성</string>
    <string name="failed_reason">실패 사유</string>
    <string name="day_repetition">일마다 반복</string>
    <string name="week_repetition">주마다 반복</string>
    <string name="all_schedule">전체 일정</string>
    <string name="create_category">새로운 카테고리 생성</string>
    <string name="category_title">Category</string>
    <string name="back">뒤로 가기</string>
    <string name="set_location">위치 등록하기</string>
    <string name="other_route">다른 경로 보기</string>
    <string name="set_departure_alarm">위치 알림 설정</string>
    <string name="arrival">도착</string>
    <string name="home">Home</string>
    <string name="no_schedule_exists">일정이 존재하지 않습니다.</string>
    <string name="today">오늘</string>
    <string name="toggle">toggle</string>
    <string name="set_alarm">알림 설정</string>
    <string name="refresh">새로고침</string>
    <string name="failed_title">실패 사유</string>
    <string name="no_search_result">검색 결과가 없습니다</string>
    <string-array name="today_list">
        <item>일정</item>
        <item>완료</item>
        <item>실패</item>
    </string-array>
    <string-array name="calendar_day">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>
</resources>