<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp">

    <TextView
        android:id="@+id/tv_dialog_add_friend_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        android:textColor="@color/main3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_dialog_add_friend_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:endIconMode="clear_text"
        app:helperText="@string/email_condition"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_add_friend_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_dialog_add_friend_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="@color/dark_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_dialog_add_friend_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/complete"
        android:textColor="@color/main3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_dialog_add_friend_layout" />

    <TextView
        android:id="@+id/tv_dialog_add_friend_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tv_dialog_add_friend_complete"
        app:layout_constraintTop_toTopOf="@id/tv_dialog_add_friend_complete" />

</androidx.constraintlayout.widget.ConstraintLayout>