<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp">

    <TextView
        android:id="@+id/tv_dialog_repetition_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/repetition"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_dialog_repetition_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_repetition_title">

        <RadioButton
            android:id="@+id/rb_dialog_repetition_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_set"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_dialog_repetition_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/layout_dialog_repetition_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_dialog_repetition_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:minWidth="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="일마다 반복"
                android:textSize="16sp" />
        </LinearLayout>

        <RadioButton
            android:id="@+id/rb_dialog_repetition_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/layout_dialog_repetition_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_dialog_repetition_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:minWidth="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="주마다 반복"
                android:textSize="16sp" />
        </LinearLayout>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_dialog_repetition_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/complete"
        android:textColor="@color/main3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_dialog_repetition_mode" />

    <TextView
        android:id="@+id/tv_dialog_repetition_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tv_dialog_repetition_complete"
        app:layout_constraintTop_toTopOf="@id/tv_dialog_repetition_complete" />

</androidx.constraintlayout.widget.ConstraintLayout>